// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Power Fx Functions [CountIf error1] =CountIf(#28e28190-63bd-4f70-aeca-26e72574c01a, >= 3) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "CountIf",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "GreaterThanEqual",
    "errors": Array [],
    "name": ">=",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "3",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Power Fx Functions [CountIf ok] =CountIf(#28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6 >= 3) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "CountIf",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "GreaterThanEqual",
    "errors": Array [],
    "name": ">=",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "3",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;
